--- a/StoreApp/StoreMVC/Views/Shop/Index.cshtml
+++ b/StoreApp/StoreMVC/Views/Shop/Index.cshtml
@@ -40,6 +40,7 @@
                 @Html.DisplayFor(modelItem => item.State)
             </td>
             <td>
+                @Html.ActionLink("Shop Here!", "Shop", new { locationID = item.LocationID})
                 @*@Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
