Can select customer from DDL and send result to action

--- a/StoreApp/StoreMVC/Views/Shop/ReviewOrder.cshtml
+++ b/StoreApp/StoreMVC/Views/Shop/ReviewOrder.cshtml
@@ -2,10 +2,18 @@
 @{
     ViewData["Title"] = "ReviewOrder";
 }
+@{ 
+    int locationID = ViewBag.LocationID;
+}
 
 <h1>Select Customer For Order</h1>
 <div class="container">
-    <label>Select a Customer:</label>
-    @Html.DropDownList("custID", new SelectList(ViewBag.Customers, "CustID", "Name"))
+    <form action="FinalizeOrder" method="post">
+        <label>Select a Customer:</label>
+        @Html.DropDownList("custID", new SelectList(ViewBag.Customers, "CustID", "Name"))
+        <input type="hidden" name="locationID" id="locationID" value="@locationID" />
+        <br />
+        <input type="submit" value="Review Order" class="btn btn-primary" />
+    </form>
 </div>
 
