--- a/StoreApp/StoreMVC/Views/Customer/Index.cshtml
+++ b/StoreApp/StoreMVC/Views/Customer/Index.cshtml
@@ -44,7 +44,7 @@
                     @Html.DisplayFor(modelItem => item.PhoneNumber)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Order History", "OrderHistory", new { firstName = item.FirstName, lastName = item.LastName }) |
                     @Html.ActionLink("Details", "Details", new { firstName = item.FirstName, lastName = item.LastName }) |
                     @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
                 </td>
