--- a/StoreApp/StoreMVC/Views/Shared/_Layout.cshtml
+++ b/StoreApp/StoreMVC/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Shop" asp-action="Index">Shop</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Manager" asp-action="Index">Manager</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
