minor manager home page updates

--- a/StoreApp/StoreMVC/Views/Manager/Index.cshtml
+++ b/StoreApp/StoreMVC/Views/Manager/Index.cshtml
@@ -14,23 +14,24 @@
     margin-top: 15px;
     color: #555;
     }
+    
 </style>
 <h1>Manager Menu</h1>
 <br />
 <div class="row text-center">
-    <div class="cold-sm-6">
+    <div class="col-sm-6">
         <div class="card">
-            <img class="card-img-top" src="~/Images/inventory.png" alt="Replenish inventory" />
+            <img class="card-img-top" src="~/Images/inventory.png" alt="Replenish inventory" width="150" height="200" />
             <h5 class="card-title">Replenish Inevntory</h5>
-            <p class="card-text">Replenish item inventory for locations</p>
+            <p class="card-text">Replenish/Remove item inventory location</p>
             <a href="" class="btn btn-primary">Replenish Inventory</a>
         </div>
     </div>
-    <div class="cold-sm-6">
+    <div class="col-sm-6">
         <div class="card">
-            <img class="card-img-top" src="~/Images/order_history.png" alt="Replenish inventory" />
-            <h5 class="card-title">Replenish Inevntory</h5>
-            <p class="card-text">Replenish item inventory for locations</p>
+            <img class="card-img-top" src="~/Images/order_history.png" alt="Replenish inventory" width="150" height="200"/>
+            <h5 class="card-title">Order History</h5>
+            <p class="card-text">View sorted order history by store location</p>
             <a href="" class="btn btn-primary">Replenish Inventory</a>
         </div>
     </div>
