Completed functionality for viewing/sorting orders by location

--- a/StoreApp/StoreMVC/Views/Manager/Index.cshtml
+++ b/StoreApp/StoreMVC/Views/Manager/Index.cshtml
@@ -21,18 +21,18 @@
 <div class="row text-center">
     <div class="col-sm-6">
         <div class="card">
-            <img class="card-img-top" src="~/Images/inventory.png" alt="Replenish inventory" width="150" height="200" />
+            <img class="card-img-top" src="~/Images/inventory.png" alt="Replenish inventory" width="150" height="210" />
             <h5 class="card-title">Replenish Inevntory</h5>
             <p class="card-text">Replenish/Remove item inventory location</p>
-            <a href="" class="btn btn-primary">Replenish Inventory</a>
+            <a asp-controller="Manager" asp-action="ViewLocations" class="btn btn-primary">Replenish Inventory</a>
         </div>
     </div>
     <div class="col-sm-6">
         <div class="card">
-            <img class="card-img-top" src="~/Images/order_history.png" alt="Replenish inventory" width="150" height="200"/>
+            <img class="card-img-top" src="~/Images/order_history.png" alt="Replenish inventory" width="150" height="210"/>
             <h5 class="card-title">Order History</h5>
             <p class="card-text">View sorted order history by store location</p>
-            <a href="" class="btn btn-primary">Replenish Inventory</a>
+            <a asp-controller="Manager" asp-action="ViewLocations" class="btn btn-primary">View History</a>
         </div>
     </div>
 </div>
