Fixed some more bugs

--- a/StoreApp/StoreMVC/Views/Customer/Index.cshtml
+++ b/StoreApp/StoreMVC/Views/Customer/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create Customer";
 }
 
-<h1>CustomerView</h1>
+<h1>All Customers</h1>
 
 <p>
     <a asp-action="Create">Add a new customer</a>
