--- a/StoreApp/StoreMVC/Views/Shared/_Layout.cshtml
+++ b/StoreApp/StoreMVC/Views/Shared/_Layout.cshtml
@@ -6,6 +6,11 @@
     <title>@ViewData["Title"] - StoreMVC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <style>
+        .navbar {
+            background-color: #8D8741;
+        }
+    </style>
 </head>
 <body>
     <header>
