--- a/StoreApp/StoreMVC/Views/Shop/AddToCart.cshtml
+++ b/StoreApp/StoreMVC/Views/Shop/AddToCart.cshtml
@@ -46,7 +46,7 @@
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td>
-                    @Html.ActionLink("Add to cart", "Quantity", new { productID = item.ProductID, locationID = item.LocationID })
+                    @Html.ActionLink("Add to cart", "Quantity", new { productID = item.ProductID, locationID = item.LocationID})
                     @*@Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                         @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
                         @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
@@ -60,6 +60,6 @@
         @{
             int locationID = ViewBag.LocationID;
         }
-        @Html.ActionLink("Review Order", "ReviewOrder", new { locationID})
+        @Html.ActionLink("Review Order", "ReviewOrder", new { locationID}, new { @class = "btn btn-primary"})
     </form>
 </div>
