--- a/StoreApp/StoreMVC/wwwroot/css/site.css
+++ b/StoreApp/StoreMVC/wwwroot/css/site.css
@@ -19,12 +19,12 @@ a {
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
-/* Sticky footer styles
+/* Sticky footer styles #1b6ec2
 -------------------------------------------------- */
 html {
   font-size: 14px;
@@ -61,11 +61,24 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  background-color:#659DBD;
+}
+table{
+    background-color: #DAAD86;
+    border: 1px solid black;
+}
+tr:hover {
+    background-color: #f5f5f5;
+}
+th{
+    padding: 15px;
+    background-color:#BC986A;
 }
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+  background-color:#FBEEC1;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
